Added Crawler & Vector embeddings to pinecone

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,8 @@ LOG_LEVEL=info
 # Rate Limiting
 # RATE_LIMIT_WINDOW_MS=900000
 # RATE_LIMIT_MAX_REQUESTS=100
+
+# OPENAI_API_KEY=
+# PINECONE_API_KEY=
+# PINECONE_ENVIRONMENT=
+# PINECONE_INDEX_NAME=
