--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@pinecone-database/pinecone": "^3.0.3",
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "openai": "^4.67.3"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
